--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,7 @@
-html, body {
+html,
+body {
   height: 100%;
-  font-family: Nunito, sans-serif;
+  font-family: "Sunflower", sans-serif;
   font-style: normal;
   font-size: 14px;
   font-weight: 300;
@@ -20,16 +21,15 @@ html, body {
 }
 
 .page-wrapper {
-  padding-top: 20px;;
+  padding-top: 20px;
 }
-
 
 .card.fj-card {
   // padding-top: 50px;
   .card-body-wrapper {
     background-color: #fff;
     border-radius: 15px;
-    box-shadow: 2px 5px 25px rgba(0, 0, 0, .15);
+    box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.15);
     min-height: 280px;
     position: relative;
     z-index: 2;
@@ -72,7 +72,7 @@ html, body {
       // position: absolute;
       top: calc(-1 * (var(--size) / 2));
       width: var(--size);
-      height: var(--size);;
+      height: var(--size);
     }
   }
 
@@ -83,25 +83,25 @@ html, body {
     font-family: var(--font-family-primary);
     font-weight: bold;
     font-size: 14px;
-    letter-spacing: .15rem;
+    letter-spacing: 0.15rem;
     padding-top: 1.5rem !important /* @TODO temp !!!*/;
-    padding: .75rem 1.5rem;
+    padding: 0.75rem 1.5rem;
     background-color: hsl(210, 5%, 41%);
     border-color: hsl(210, 5%, 36%);
     box-shadow: 0 5px 0 hsl(210, 5%, 20%);
     bottom: -45px;
     position: absolute;
     right: 1.5rem;
-    -webkit-transition: -webkit-transform .2s;
-    transition: -webkit-transform .2s;
-    transition: transform .2s;
-    transition: transform .2s, -webkit-transform .2s;
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+    transition: transform 0.2s, -webkit-transform 0.2s;
 
     &:hover {
       background-color: hsl(210, 5%, 51%);
       border-color: hsl(210, 5%, 41%);
-      -webkit-transform: translateY(.25rem);
-      transform: translateY(.25rem);
+      -webkit-transform: translateY(0.25rem);
+      transform: translateY(0.25rem);
     }
   }
 
@@ -129,7 +129,9 @@ html, body {
     background-color: #bebebe;
   }
 
-  .card-title, .card-text, .card-date {
+  .card-title,
+  .card-text,
+  .card-date {
     background-color: #bebebe;
   }
 }
@@ -147,12 +149,12 @@ html, body {
     &-brand {
       color: black;
       font-size: 24px;
-      text-transform: uppercase;
+      // text-transform: uppercase;
       letter-spacing: 1px;
       font-weight: bold;
 
       a {
-        // color: black;
+        // color: #40d65c;
         font-weight: 900;
       }
     }
@@ -169,17 +171,17 @@ html, body {
       text-transform: uppercase;
 
       &.active {
-      color: #dba919;
+        color: #dba919;
       }
 
-      &:hover, &:focus {
+      &:hover,
+      &:focus {
         color: #dba919;
       }
     }
   }
 
   .fj-dropdown-menu {
-
     .fj-dropdown-item {
       color: #4e4e4e;
 
@@ -201,9 +203,8 @@ html, body {
   background-color: black !important;
 }
 
-
 .bg-transparent.menu-open {
-  background-color: #2C3E50 !important;
+  background-color: #2c3e50 !important;
 }
 
 .bg-transparent.menu-close {
@@ -223,10 +224,11 @@ html, body {
 
 .hljs {
   padding: 20px 20px 10px;
-  border-radius: 10px
+  border-radius: 10px;
 }
 
-.code-filename, .image-alt {
+.code-filename,
+.image-alt {
   opacity: 0.6;
   margin-top: 10px;
   font-style: italic;
@@ -258,7 +260,6 @@ html, body {
   margin-top: 3px;
 }
 
-
 .blog-detail-page {
   font-size: 19px;
 
@@ -277,7 +278,6 @@ html, body {
     font-size: 18px;
   }
 }
-
 
 .dark {
   .card.fj-card {
@@ -304,32 +304,6 @@ html, body {
 
       &-link {
         color: #ffffff;
-      }
-    }
-  }
-}
-
-.day-night-toggle.react-toggle {
-  &.react-toggle--checked:hover {
-    &:not(.react-toggle--disabled) .react-toggle-track {
-      background-color: black;
-    }
-  }
-
-  .react-toggle-track {
-    background-color: black;
-    &:hover {
-      background-color: black;
-    }
-
-    &-x, &-check {
-      right: 8px;
-      width: 15px;
-      height: 15px;
-
-      svg {
-        width: 100%;
-        height: 100%;
       }
     }
   }
@@ -392,7 +366,8 @@ html, body {
       background-color: black;
     }
 
-    &-x, &-check {
+    &-x,
+    &-check {
       right: 8px;
       width: 15px;
       height: 15px;
@@ -407,28 +382,27 @@ html, body {
 
 .view.overlay {
   height: 150px;
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    margin: 0;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  margin: 0;
 
-    > img {
-      object-fit: cover;
-      height: 100%;
-    }
+  > img {
+    object-fit: cover;
+    height: 100%;
+  }
 }
-
 
 blockquote {
   position: relative;
-    color: #999;
-    font-size: 1.25em;
-    font-family: Georgia,Times New Roman,Times,serif;
-    font-style: italic;
-    margin: 0;
-    padding: .5em .5em .5em 0.5em;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    background-origin: border-box;
-    background-size: 2em;
+  color: #999;
+  font-size: 1.25em;
+  font-family: Georgia, Times New Roman, Times, serif;
+  font-style: italic;
+  margin: 0;
+  padding: 0.5em 0.5em 0.5em 0.5em;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-origin: border-box;
+  background-size: 2em;
 }
