--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  font-family: "Sunflower", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-style: normal;
   font-size: 14px;
   font-weight: 300;
