--- a/styles/index.scss
+++ b/styles/index.scss
@@ -48,6 +48,16 @@ body {
       font-weight: bold;
       margin-bottom: 3px;
     }
+
+    .card-text {
+      height: 42px;
+      width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
   }
 
   .card-date {
@@ -56,7 +66,13 @@ body {
 
   .card-main-title {
     font-size: 22px;
-    height: 60px;
+    height: 52px;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   .card-header {
