--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,7 +3,7 @@ body {
   height: 100%;
   font-family: "Noto Sans KR", sans-serif;
   font-style: normal;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
   background-color: #f4f7f9;
 }
@@ -12,7 +12,7 @@ body {
   cursor: pointer;
 }
 
-.hoverable:hover {
+.hoverable:hover { 
   opacity: 0.7;
 }
 
@@ -65,13 +65,13 @@ body {
   }
 
   .card-main-title {
-    font-size: 22px;
-    height: 52px;
+    font-size: 24px;
+    // height: 52px;
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
   }
 
