--- a/styles/index.scss
+++ b/styles/index.scss
@@ -31,139 +31,138 @@ body {
   }
 }
 
-.card.fj-card {
-  // padding-top: 50px;
-  .card-body-wrapper {
-    background-color: #fff;
-    border-radius: 15px;
-    box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.15);
-    min-height: 280px;
-    position: relative;
-    z-index: 2;
-    padding: 20px;
-    padding-bottom: 40px;
+// .card.fj-card {
+//   // padding-top: 50px;
+//   .card-body-wrapper {
+//     background-color: #fff;
+//     border-radius: 15px;
+//     box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.15);
+//     min-height: 280px;
+//     position: relative;
+//     z-index: 2;
+//     padding: 20px;
+//     padding-bottom: 40px;
 
-    &.no-image {
-      min-height: auto;
-    }
-  }
+//     &.no-image {
+//       min-height: auto;
+//     }
+//   }
 
-  .card-body {
-    padding: 15px 0px 0px;
+//   .card-body {
+//     padding: 15px 0px 0px;
 
-    .card-title {
-      font-weight: bold;
-      margin-bottom: 3px;
-    }
+//     .card-title {
+//       font-weight: bold;
+//       margin-bottom: 3px;
+//     }
 
-    .card-text {
-      height: 42px;
-      width: 100%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-    }
-  }
+//     .card-text {
+//       height: 42px;
+//       width: 100%;
+//       overflow: hidden;
+//       text-overflow: ellipsis;
+//       display: -webkit-box;
+//       -webkit-line-clamp: 2;
+//       -webkit-box-orient: vertical;
+//     }
+//   }
 
-  .card-date {
-    font-size: 13px;
-  }
+//   .card-date {
+//     font-size: 13px;
+//   }
 
-  .card-main-title {
-    font-size: 24px;
-    // height: 52px;
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-  }
+//   .card-main-title {
+//     font-size: 24px;
+//     // height: 52px;
+//     width: 100%;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+//     display: -webkit-box;
+//     -webkit-line-clamp: 1;
+//     -webkit-box-orient: vertical;
+//   }
 
-  .card-header {
-    background-color: transparent;
-    padding: 0px 0px 15px;
-    img {
-      --size: 45px;
-      background-color: #fff;
-      border: 1px solid #464646;
-      border-radius: 50%;
-      // box-shadow: 2px 5px 25px rgba(0, 0, 0, .15);
-      // left: 10px;
-      // position: absolute;
-      top: calc(-1 * (var(--size) / 2));
-      width: var(--size);
-      height: var(--size);
-    }
-  }
+//   .card-header {
+//     background-color: transparent;
+//     padding: 0px 0px 15px;
+//     img {
+//       --size: 45px;
+//       background-color: #fff;
+//       border: 1px solid #464646;
+//       border-radius: 50%;
+//       // box-shadow: 2px 5px 25px rgba(0, 0, 0, .15);
+//       // left: 10px;
+//       // position: absolute;
+//       top: calc(-1 * (var(--size) / 2));
+//       width: var(--size);
+//       height: var(--size);
+//     }
+//   }
 
-  .card-button {
-    border-radius: 10px;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: var(--font-family-primary);
-    font-weight: bold;
-    font-size: 14px;
-    letter-spacing: 0.15rem;
-    padding-top: 1.5rem !important /* @TODO temp !!!*/;
-    padding: 0.75rem 1.5rem;
-    background-color: hsl(210, 5%, 41%);
-    border-color: hsl(210, 5%, 36%);
-    box-shadow: 0 5px 0 hsl(210, 5%, 20%);
-    bottom: -45px;
-    position: absolute;
-    right: 1.5rem;
-    -webkit-transition: -webkit-transform 0.2s;
-    transition: -webkit-transform 0.2s;
-    transition: transform 0.2s;
-    transition: transform 0.2s, -webkit-transform 0.2s;
+//   .card-button {
+//     border-radius: 10px;
+//     cursor: pointer;
+//     color: #ffffff;
+//     font-family: var(--font-family-primary);
+//     font-weight: bold;
+//     font-size: 14px;
+//     letter-spacing: 0.15rem;
+//     padding-top: 1.5rem !important /* @TODO temp !!!*/;
+//     padding: 0.75rem 1.5rem;
+//     background-color: hsl(210, 5%, 41%);
+//     border-color: hsl(210, 5%, 36%);
+//     box-shadow: 0 5px 0 hsl(210, 5%, 20%);
+//     bottom: -45px;
+//     position: absolute;
+//     right: 1.5rem;
+//     -webkit-transition: -webkit-transform 0.2s;
+//     transition: -webkit-transform 0.2s;
+//     transition: transform 0.2s;
+//     transition: transform 0.2s, -webkit-transform 0.2s;
 
-    &:hover {
-      background-color: hsl(210, 5%, 51%);
-      border-color: hsl(210, 5%, 41%);
-      -webkit-transform: translateY(0.25rem);
-      transform: translateY(0.25rem);
-    }
-  }
+//     &:hover {
+//       background-color: hsl(210, 5%, 51%);
+//       border-color: hsl(210, 5%, 41%);
+//       -webkit-transform: translateY(0.25rem);
+//       transform: translateY(0.25rem);
+//     }
+//   }
 
-  &.fj-card-list {
-    .card-body-wrapper {
-      min-height: 180px;
-      // position: relative;
-      // z-index: 2;
-      // padding: 20px;
-      // padding-bottom: 40px;
-    }
+//   &.fj-card-list {
+//     .card-body-wrapper {
+//       min-height: 180px;
+//       // position: relative;
+//       // z-index: 2;
+//       // padding: 20px;
+//       // padding-bottom: 40px;
+//     }
 
-    .card-header {
-      background-color: transparent;
-      padding-bottom: 5px;
-    }
-  }
-}
+//     .card-header {
+//       background-color: transparent;
+//       padding-bottom: 5px;
+//     }
+//   }
+// }
 
-.card.fj-card.placeholder {
-  color: transparent;
-  .image-placeholder {
-    height: 200px;
-    width: 100%;
-    background-color: #bebebe;
-  }
+// .card.fj-card.placeholder {
+//   color: transparent;
+//   .image-placeholder {
+//     height: 200px;
+//     width: 100%;
+//     background-color: #bebebe;
+//   }
 
-  .card-title,
-  .card-text,
-  .card-date {
-    background-color: #bebebe;
-  }
-}
+//   .card-title,
+//   .card-text,
+//   .card-date {
+//     background-color: #bebebe;
+//   }
+// }
 
-.card {
-  margin-bottom: 60px;
-}
+// .card {
+//   margin-bottom: 60px;
+// }
 
-// HEADER STARTS
 .fj-navbar.fj-nav-base {
   width: 100%;
   padding: 20px 0px;
@@ -240,22 +239,6 @@ body {
 
 .bg-transparent.menu-close {
   transition: 1s;
-}
-// HEADER ENDS
-
-.card-header {
-  display: flex;
-  // justify-content: center;
-  align-items: center;
-
-  &-title {
-    margin-bottom: 0;
-  }
-}
-
-.hljs {
-  padding: 20px 20px 10px;
-  border-radius: 10px;
 }
 
 .code-filename,
@@ -401,15 +384,33 @@ body {
 
 .page-footer {
   padding: 20px;
-  font-size: 20px;
   text-align: center;
 
   @media screen and (min-width: 768px) {
     padding: 40px;
   }
 
+  p {
+    color: #2b2c38;
+    font-size: 0.875rem;
+    margin-bottom: 0;
+
+    @media screen and (min-width: 768px) {
+      font-size: 1rem;
+    }
+  }
+
   a {
-    color: #63696e;
+    color: #007a50;
+    // color: #6dd069;
+  }
+
+  .icon {
+    font-size: 2rem;
+  }
+
+  .link {
+    font-weight: 500;
   }
 }
 
@@ -538,6 +539,15 @@ blockquote {
   .blog-detail-page {
     border-top: 1px solid #dee2e6;
     border-bottom: 1px solid #dee2e6;
-    // border-radius: 8px;
+  }
+
+  .page-footer {
+    p {
+      color: #dcdcdc;
+    }
+
+    a {
+      color: #6dd069;
+    }
   }
 }
