--- a/styles/index.scss
+++ b/styles/index.scss
@@ -253,19 +253,22 @@ body {
 }
 
 .blog-image {
-  margin-bottom: 10px;
-  text-align: center;
-
   &-left {
     float: left;
     margin-right: 30px;
     max-width: 50%;
+    margin-bottom: 10px;
   }
 
   &-right {
     float: right;
     margin-left: 30px;
     max-width: 50%;
+    margin-bottom: 10px;
+  }
+
+  &-center {
+    text-align: center;
   }
 
   > img {
