--- a/styles/index.scss
+++ b/styles/index.scss
@@ -31,137 +31,9 @@ body {
   }
 }
 
-// .card.fj-card {
-//   // padding-top: 50px;
-//   .card-body-wrapper {
-//     background-color: #fff;
-//     border-radius: 15px;
-//     box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.15);
-//     min-height: 280px;
-//     position: relative;
-//     z-index: 2;
-//     padding: 20px;
-//     padding-bottom: 40px;
-
-//     &.no-image {
-//       min-height: auto;
-//     }
-//   }
-
-//   .card-body {
-//     padding: 15px 0px 0px;
-
-//     .card-title {
-//       font-weight: bold;
-//       margin-bottom: 3px;
-//     }
-
-//     .card-text {
-//       height: 42px;
-//       width: 100%;
-//       overflow: hidden;
-//       text-overflow: ellipsis;
-//       display: -webkit-box;
-//       -webkit-line-clamp: 2;
-//       -webkit-box-orient: vertical;
-//     }
-//   }
-
-//   .card-date {
-//     font-size: 13px;
-//   }
-
-//   .card-main-title {
-//     font-size: 24px;
-//     // height: 52px;
-//     width: 100%;
-//     overflow: hidden;
-//     text-overflow: ellipsis;
-//     display: -webkit-box;
-//     -webkit-line-clamp: 1;
-//     -webkit-box-orient: vertical;
-//   }
-
-//   .card-header {
-//     background-color: transparent;
-//     padding: 0px 0px 15px;
-//     img {
-//       --size: 45px;
-//       background-color: #fff;
-//       border: 1px solid #464646;
-//       border-radius: 50%;
-//       // box-shadow: 2px 5px 25px rgba(0, 0, 0, .15);
-//       // left: 10px;
-//       // position: absolute;
-//       top: calc(-1 * (var(--size) / 2));
-//       width: var(--size);
-//       height: var(--size);
-//     }
-//   }
-
-//   .card-button {
-//     border-radius: 10px;
-//     cursor: pointer;
-//     color: #ffffff;
-//     font-family: var(--font-family-primary);
-//     font-weight: bold;
-//     font-size: 14px;
-//     letter-spacing: 0.15rem;
-//     padding-top: 1.5rem !important /* @TODO temp !!!*/;
-//     padding: 0.75rem 1.5rem;
-//     background-color: hsl(210, 5%, 41%);
-//     border-color: hsl(210, 5%, 36%);
-//     box-shadow: 0 5px 0 hsl(210, 5%, 20%);
-//     bottom: -45px;
-//     position: absolute;
-//     right: 1.5rem;
-//     -webkit-transition: -webkit-transform 0.2s;
-//     transition: -webkit-transform 0.2s;
-//     transition: transform 0.2s;
-//     transition: transform 0.2s, -webkit-transform 0.2s;
-
-//     &:hover {
-//       background-color: hsl(210, 5%, 51%);
-//       border-color: hsl(210, 5%, 41%);
-//       -webkit-transform: translateY(0.25rem);
-//       transform: translateY(0.25rem);
-//     }
-//   }
-
-//   &.fj-card-list {
-//     .card-body-wrapper {
-//       min-height: 180px;
-//       // position: relative;
-//       // z-index: 2;
-//       // padding: 20px;
-//       // padding-bottom: 40px;
-//     }
-
-//     .card-header {
-//       background-color: transparent;
-//       padding-bottom: 5px;
-//     }
-//   }
-// }
-
-// .card.fj-card.placeholder {
-//   color: transparent;
-//   .image-placeholder {
-//     height: 200px;
-//     width: 100%;
-//     background-color: #bebebe;
-//   }
-
-//   .card-title,
-//   .card-text,
-//   .card-date {
-//     background-color: #bebebe;
-//   }
-// }
-
-// .card {
-//   margin-bottom: 60px;
-// }
+.lineBreak {
+  border-color: #232129;
+}
 
 .fj-navbar.fj-nav-base {
   width: 100%;
@@ -551,5 +423,9 @@ blockquote {
     a {
       color: #6dd069;
     }
+  }
+
+  .lineBreak {
+    border-color: #2c3e50;
   }
 }
